# git_diff_extractor_ollama_rust

./: Cargo.toml  README.md
src/: main.rs
