[package]
name = "git_diff_extractor_rust"
version = "0.1.0"
edition = "2025"
authors = ["Rhuan Hianc"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
